--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Analysis Demo</title>
+    <title>Advanced Audio Analysis Demo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎵 Audio Analysis Demo</h1>
-            <p>Upload multiple audio files to analyze their musical features</p>
+            <h1>🎵 Advanced Audio Analysis</h1>
+            <p>Upload multiple audio files to analyze BPM, Danceability & Mood</p>
         </header>
 
         <main>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="results-section" id="resultsSection" style="display: none;">
-                <h2>Analysis Results</h2>
+                <h2>Advanced Analysis Results</h2>
                 <div id="resultsContainer" class="results-container">
                     <!-- Results will be dynamically added here -->
                 </div>
